--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 <div id="setupScreen" class="setup-screen">
   <div class="setup-card">
     <div class="setup-logo">
-      <!-- Logo placeholder -->
-      <div class="logo-box">JM</div>
-    </div>
+      <img src="logo.png" alt="Logo" class="logo-box">
+      </div>
     <h1 class="setup-title">FLEX APP</h1>
     <p class="setup-sub">Enter your credentials to connect</p>
     <div class="setup-form">
@@ -45,9 +44,8 @@
   <!-- HEADER -->
   <header class="app-header">
     <div class="header-logo">
-      <!-- Replace src with actual logo image when available -->
-      <div class="logo-box-sm">JM</div>
-    </div>
+      <img src="logo.png" alt="Logo" class="logo-box-sm">
+      </div>
     <div class="header-center">
       <span class="header-title">FLEX APP</span>
     </div>
