--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="JM Flex">
-  <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-logo.png" />
   <title>JM Flex App</title>
   <link rel="stylesheet" href="styles.css?v=2.0">
 </head>
